crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__mysql_update.snap
---
source: crates/db/src/dialect/mod.rs
expression: "format!(\"{}\\n\\n{}\", d.update_template(&q, &cols, &pk),\nd.update_template(&q, &cols, &[]))"
---
UPDATE sales.`order`
SET
  `Order Date` = NULL,
  total = NULL
WHERE id = NULL
  AND line = NULL;

UPDATE sales.`order`
SET
  id = NULL,
  line = NULL,
  `Order Date` = NULL,
  total = NULL
WHERE id = NULL
  AND line = NULL
  AND `Order Date` = NULL
  AND total = NULL;
