crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__oracle_script_exec.snap
---
source: crates/db/src/dialect/mod.rs
expression: "[d.script_exec(ObjectKind::Procedure, &p, &params),\nd.script_exec(ObjectKind::Procedure, &p, &[]),\nd.script_exec(ObjectKind::Function, &p, &params),\nd.script_exec(ObjectKind::Function, &p, &[String::new()]),].join(\"\\n\\n\")"
---
BEGIN
  "sales"."archive"("cid" => NULL, "since" => NULL);
END;
/

BEGIN
  "sales"."archive";
END;
/

SELECT "sales"."archive"("cid" => NULL, "since" => NULL) FROM DUAL;

SELECT "sales"."archive"(NULL) FROM DUAL;
