crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__oracle_select.snap
---
source: crates/db/src/dialect/mod.rs
expression: "format!(\"{}\\n\\n{}\", d.select_template(&q, &cols, 100),\nd.select_template(&q, &[], 100))"
---
SELECT
  "id",
  "line",
  "Order Date",
  "total"
FROM "sales"."order"
FETCH FIRST 100 ROWS ONLY;

SELECT *
FROM "sales"."order"
FETCH FIRST 100 ROWS ONLY;
